# OTC_Project

./: .gitmodules  README.md  partitions.csv
main/: CMakeLists.txt  Kconfig.projbuild  alarm.c  animations.c  clock.c  const_text.c  display.c  main.c  online_requests.c  pwm.c  sdcard.c  sntp.c  spiffs_task.c  touchpad.c  ui_task.c  weather.c  wifi.c
main/include/: alarm.h  animations.h  clock.h  display.h  lv_conf.h  main.h  online_requests.h  pwm.h  sdcard.h  sntp.h  spiffs_task.h  touchpad.h  ui_task.h  weather.h  wifi.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_main_screen.c  ui_main_screen.h  ui_styles.c  ui_styles.h  ui_weather_screen.c  ui_weather_screen.h  ui_wifi_list.c  ui_wifi_list.h  ui_wifi_popup.c  ui_wifi_popup.h  ui_wifi_screen.c  ui_wifi_screen.h
main/ui/components/: ui_alarms_popup.c  ui_alarms_popup.h  ui_comp_hook.c  ui_wifi_list.c  ui_wifi_list.h  ui_wifi_popup.c  ui_wifi_popup.h
main/ui/fonts/: ui_font_UIIcons20.c  ui_font_UIIcons24.c  ui_font_UIIcons44.c  ui_font_UIIconsNew16.c  ui_font_UIIconsNew36.c  ui_font_Varino12.c  ui_font_Varino18.c  ui_font_Varino30.c  ui_font_digital144.c  ui_font_weather100.c
main/ui/images/: ui_img_all2_png.c  ui_img_all3_png.c  ui_img_all_png.c  ui_img_day_113_png.c  ui_img_day_116_png.c  ui_img_day_119_png.c  ui_img_day_122_png.c  ui_img_day_143_png.c  ui_img_day_176_png.c  ui_img_day_179_png.c  ui_img_day_182_png.c  ui_img_day_185_png.c  ui_img_day_200_png.c  ui_img_day_227_png.c  ui_img_day_230_png.c  ui_img_day_248_png.c  (+84 more)
(+19 files in other folders)
